doc: add docs for chat handlers
